# AI-Gym-Principles

./: .env.example  .gitignore  AI_DEBUGGING_FIXES_APPLIED.md  API_KEY_SETUP_GUIDE.md  CODE_OPTIMIZATION_REPORT.md  CORS_AND_COMMUNICATION_FIXES.md  DEV_SETUP.md  LEARNING_AGENT_GUIDE.md  LLM_INTEGRATION_GUIDE.md  MIGRATION_PROCEDURES.md  PLUGIN_DEVELOPMENT.md  Procfile  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  SETUP.md  TROUBLESHOOTING_HTTP_ADAPTER.md  adapter_agent_id.txt  adaptive_bridge_builder_agent_id.txt  alembic.ini  check_gym_health.py  check_setup.py  decision_wrapper.py  decision_wrapper_agent_id.txt  dev-start.bat  dev-start.sh  diagnose_gym.py  example_usage.py  fix_database_issue.py  fix_database_issue2.py  fix_database_issue3.py  gym_agent_bridge.py  http_agent_example.py  json_rpc_adapter.py  list_agents.py  nixpacks.toml  production_api_key.txt  pyproject.toml  pyrightconfig.json  quick_test.py  railway.json  (+46 more)
.github/: CI_CD_SETUP.md  dependabot.yml
.github/workflows/: ci-cd.yml  security.yml
alembic/: env.py
alembic/versions/: ab30cbe405ef_initial_schema.py
client/javascript/: .gitignore  README.md  package.json  tsconfig.json  tsconfig.types.json
client/javascript/src/: client.ts  index.ts  types.ts  websocket.ts
client/python/: README.md  __init__.py  principles_gym_client.py  setup.py
deployment/: .env.production  Dockerfile  README.md  docker-compose.yml  production-guide.md
deployment/nginx/: nginx.conf
deployment/nginx/conf.d/: api.conf
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.responsive.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  (+2 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: __init__.py
src/adapters/: __init__.py  anthropic_adapter.py  base.py  custom_adapter.py  http_adapter.py  langchain_adapter.py  mock_adapter.py  openai_adapter.py
src/api/: __init__.py  app.py  middleware.py  plugin_routes.py  routes.py  training_integration.py  websocket.py
src/core/: __init__.py  behavioral_tracker_fix.py  behavioral_tracker_wrapper.py  config.py  database.py  inference.py  llm_analysis.py  logging_config.py  models.py  monitoring.py  tracking.py  tracking_patch.py
src/plugins/: __init__.py  base.py  decorators.py  loader.py
src/scenarios/: __init__.py  archetypes.py  branching.py  engine.py
tests/: test_branching_scenarios.py  test_database_migrations.py  test_inference.py  test_integration.py  test_performance.py  test_plugins.py  test_scenarios.py  test_setup.py
(+25 files in other folders)
